# service/dto/guest.login.dto.go
@@ -1,6 +1,6 @@
 package dto
 
-type GuestLoginPayload struct {
+type GuestLoginRequest struct {
 	Username string `json:"username" form:"username" validate:"required,min=3" example:""`
 	Password string `json:"password" form:"password" validate:"required,min=3" example:""`
 }
