# service/route/user.auth.go
@@ -10,6 +10,14 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// @Summary 	Get user by auth
+// @Description Get user by auth
+// @Tags 		User
+// @Accept 		json
+// @Produce 	json
+// @Success 	200 {object} dto.UserAuthDataResponse "ok"
+// @Security	BearerAuth
+// @Router 		/auth/user [get]
 func UserAuth(c *fiber.Ctx) error {
 	user := &db.User{}
 	if ok, err := user.GetUser(c); !ok {
@@ -20,7 +28,7 @@ func UserAuth(c *fiber.Ctx) error {
 	return helper.SendData(
 		c,
 		lang.L(lang.SetL().RETRIEVED_SUCCESSFULLY, fiber.Map{"operator": lang.SetL().USER}),
-		dto.AuthUserDataResponse{
+		dto.UserAuthDataResponse{
 			Id:        id,
 			Username:  user.Username,
 			Name:      user.Name,
